Added documentation, made Radix Tree iterable, made application deployable to Heroku.

--- a/cities/src/main/webapp/WEB-INF/web.xml
+++ b/cities/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,6 @@
 
     <servlet-mapping>
         <servlet-name>CitySuggestionServlet</servlet-name>
-        <url-pattern>suggestions</url-pattern>
+        <url-pattern>/suggestions</url-pattern>
     </servlet-mapping>
 </web-app>
