--- a/pom.xml
+++ b/pom.xml
@@ -14,20 +14,13 @@
         <pluginManagement>
             <plugins>
                 <plugin>
-                    <artifactId>maven-war-plugin</artifactId>
-                    <version>2.6</version>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>3.0.2</version>
                     <configuration>
-                        <webResources>
-                            <resource>
-                                <directory>${project.basedir}\lib</directory>
-                                <targetPath>WEB-INF/lib</targetPath>
-                                <filtering>false</filtering>
-                                <includes>
-                                    <include>**/*.jar</include>
-                                </includes>
-                            </resource>
-                        </webResources>
+                        <appName>city-directory</appName>
                     </configuration>
+
                 </plugin>
             </plugins>
         </pluginManagement>
